# icat-extract

./: .gitignore  README.md  main.py  pyproject.toml
examples/: config.example.yaml  python-icat-examples.md
queries/: investigations.py
src/: icat.cfg  main.py
src/icat_extract/: cli.py  client.py  config.py  constants.py  models.py
src/icat_extract/queries/: investigations.py
