[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "icat-extract"
version = "0.1.0"
description = "Tools for extracting and preparing ICAT metadata for data lakes and AI workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "James Cornall", email = "james.cornall@example.org" }
]

dependencies = [
    "pyyaml",
    "python-dateutil",
    "pandas",
    "python-icat",
]


[project.scripts]
icat-extract = "icat_extract.cli:main"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]